
[TestProp/should_include_value_in_props_on_full_request - 1]
{
 "component": "TestComponent",
 "props": {
  "age": 30,
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_emit_merge_match-on_metadata_when_MergeKey_is_configured - 1]
{
 "component": "TestComponent",
 "matchPropsOn": [
  "posts.id",
  "notifications.uuid",
  "conversation.messages.id"
 ],
 "mergeProps": [
  "posts",
  "conversation.messages"
 ],
 "prependProps": [
  "notifications"
 ],
 "props": {
  "conversation": {
   "messages": [
    "one"
   ]
  },
  "notifications": [
   "one"
  ],
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_mergeProps_when_WithMerge_is_set - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "mergeable"
 ],
 "props": {
  "mergeable": {
   "key": "val"
  },
  "normal": "value"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_respect_partial_blacklist_when_partial_component_matches - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_respect_partial_whitelist_when_partial_component_matches - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_onceProps_when_WithOnce_is_set - 1]
{
 "component": "TestComponent",
 "onceProps": {
  "once_key": {
   "prop": "onceable"
  }
 },
 "props": {
  "onceable": "secret",
  "regular": "value"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_suppress_mergeProps_and_matchPropsOn_for_reset_keys_while_still_returning_the_value - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman",
  "posts": [
   "fresh"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_treat_MergeKey_with_only_matchOn_as_a_matchOn-only_directive_at_root - 1]
{
 "component": "TestComponent",
 "matchPropsOn": [
  "posts.id"
 ],
 "mergeProps": [
  "posts"
 ],
 "props": {
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_mergeProps_with_NewMergeAppend_for_root-only_append - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "posts"
 ],
 "props": {
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_prependProps_with_NewMergePrepend_for_root-only_prepend - 1]
{
 "component": "TestComponent",
 "prependProps": [
  "notifications"
 ],
 "props": {
  "notifications": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_prependProps_with_NewPrependRoot_for_root-only_prepend - 1]
{
 "component": "TestComponent",
 "prependProps": [
  "notifications"
 ],
 "props": {
  "notifications": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_treat_matchOn-only_as_root-level_append_with_NewAppendRoot - 1]
{
 "component": "TestComponent",
 "matchPropsOn": [
  "posts.id"
 ],
 "mergeProps": [
  "posts"
 ],
 "props": {
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_mergeProps_with_NewAppendRoot_for_root-only_append - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "mergeable"
 ],
 "props": {
  "mergeable": {
   "key": "val"
  },
  "normal": "value"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_emit_merge_match-on_metadata_for_root_and_path_configs - 1]
{
 "component": "TestComponent",
 "matchPropsOn": [
  "posts.id",
  "notifications.uuid",
  "conversation.messages.id"
 ],
 "mergeProps": [
  "posts",
  "conversation.messages"
 ],
 "prependProps": [
  "notifications"
 ],
 "props": {
  "conversation": {
   "messages": [
    "one"
   ]
  },
  "notifications": [
   "one"
  ],
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_mergeProps_with_NewAppendRoot_for_root-only_append#01 - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "posts"
 ],
 "props": {
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_emit_merge_metadata_for_path_and_deep_merge_configs - 1]
{
 "component": "TestComponent",
 "deepMergeProps": [
  "settings"
 ],
 "matchPropsOn": [
  "conversation.messages.id",
  "settings.key"
 ],
 "mergeProps": [
  "posts",
  "conversation.messages"
 ],
 "prependProps": [
  "notifications"
 ],
 "props": {
  "conversation": {
   "messages": [
    "one"
   ]
  },
  "notifications": [
   "one"
  ],
  "posts": [
   "one"
  ],
  "settings": {
   "theme": "dark"
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/it_should_skip_once_prop_value_resolution_when_its_key_appears_in_exceptOnceProps_header - 1]
{
 "component": "TestComponent",
 "onceProps": {
  "locale_key": {
   "prop": "locale"
  }
 },
 "props": {
  "timezone": "UTC"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/it_should_suppress_root-level_merge_entry_when_path-based_append_keys_are_present - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "conversation.messages"
 ],
 "props": {
  "conversation": {
   "messages": [
    "one"
   ]
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/it_should_preserve_custom_once_key_in_onceProps_when_WithOnce_key_differs_from_prop_key - 1]
{
 "component": "TestComponent",
 "onceProps": {
  "app-locale": {
   "prop": "locale"
  }
 },
 "props": {
  "locale": "en"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/it_should_not_skip_once_prop_when_Fresh_is_true_despite_key_being_in_exceptOnceProps - 1]
{
 "component": "TestComponent",
 "onceProps": {
  "locale_key": {
   "prop": "locale"
  }
 },
 "props": {
  "locale": "en"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/it_should_suppress_deepMergeProps_and_matchPropsOn_for_reset_keys_when_DeepMerge_is_set - 1]
{
 "component": "TestComponent",
 "props": {
  "settings": {
   "theme": "dark"
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/it_should_qualify_matchOn_keys_with_the_prop_root_when_matchOn_paths_are_non-empty - 1]
{
 "component": "TestComponent",
 "matchPropsOn": [
  "conversation.messages.id"
 ],
 "mergeProps": [
  "conversation.messages"
 ],
 "props": {
  "conversation": {
   "messages": [
    "one"
   ]
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/it_should_populate_deepMergeProps_and_matchPropsOn_when_NewDeepMerge_is_set - 1]
{
 "component": "TestComponent",
 "deepMergeProps": [
  "settings"
 ],
 "matchPropsOn": [
  "settings.key"
 ],
 "props": {
  "settings": {
   "theme": "dark"
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/it_should_ignore_empty_append,_prepend_and_matchOn_path_segments - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "posts.data",
  "posts.items"
 ],
 "props": {
  "posts": {
   "data": [
    "one"
   ],
   "items": [
    "two"
   ]
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---
